# django-typescript-routes

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
scripts/: test
tests/: logic--test.py  settings.py  urls_basic.py
tests/fixtures/: basic.ts  empty.ts
typescript_routes/lib/: logic.py
typescript_routes/management/commands/: generate_typescript_routes.py
typescript_routes/templates/: urls.ts.template
