[tool.poetry]
authors = ["Justin Duke <justin@buttondown.email>"]
description = "Generate typescript routes from a Django URLconf"
license = "MIT"
name = "django-typescript-routes"
packages = [{ include = "typescript_routes" }]
readme = "README.md"
repository = "https://github.com/buttondownemail/django-typescript-routes"
version = "0.1.0"


[tool.poetry.dependencies]
Django = "^4"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
