[tool.poetry]
authors = ["Justin Duke <justin@buttondown.email>"]
description = "Generate typescript routes from a Django URLconf"
license = "MIT"
name = "django-typescript-routes"
packages = [{ include = "typescript_routes" }]
readme = "README.md"
repository = "https://github.com/buttondown-email/django-typescript-routes"
version = "0.1.1"


[tool.poetry.dependencies]
Django = "^5"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.284"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
